version 0.99.4 - xx-Jul-2010
 . [FIX] CocosDenshion: fixed memory leak weak reallocing buffers (issue #919)
 . [FIX] EAGLView: removed unused 'delegate_' ivar
 . [FIX] EAGLView: it is possible to resize the view (issue #914)
 . [FIX] GLES-Render: solid objects' colors synced with box2d repository
 . [FIX] Scheduler: Doesn't reschedule already scheduled method. It only updates the interval.
 . [FIX] Templates & Tests: added App Delegate foreground & background callbacks
 
 version 0.99.4-rc3 - 01-Jul-2010
 . [FIX] All: Import ccCArray instead of ccArray (compiles in case sentive file system)
 . [FIX] CCArray: fixed overflow (issue #901)
 . [FIX] CocosDenshion: Fixed bug in CDBufferManager, added test case to FadeToGrey, fixed Info.plist
 . [FIX] RenderTexture: works in HiRes mode (issue #898)
 . [FIX] Director: Avoid re-scale initial issue (issue #899, issue #350)
 . [FIX] Director: convertToUI works as expected (issue #902)
 . [FIX] Director: renamed mainLoop -> drawScene
 . [FIX] Director: appended '_' to ivars (eg: FPSLabel -> FPSLabel_)

version 0.99.4-rc2 - 24-Jun-2010
 . [NEW] CCArray: Internally uses CCARRAY_FOREACH. Improved performance (issue #353)
 . [NEW] Templates: BaseSDK 4.0. Deploy OS Target: 3.0
 . [FIX] CocosDenshion: compiles with LLVM v1.5
 . [FIX] Removed artifacts from PageTurnTransition (issue #751)
 . [FIX] Templates: calls Director#purgeCachedData on memory warning
 . [FIX] Templates: sets CD_DEBUG=1 in debug configuration
 . [FIX] Texture2D: JPEG images are displayed correctly in iOS4 (issue #886)

version 0.99.4-rc - 22-Jun-2010
 . [NEW] Director: supports "setContentScaleFactor" (high-res support natively)
 . [FIX] Effects: Creates correct color buffer
 . [FIX] Director: Sets correctly portrait upside-down orientation
 . [FIX] Sprites: flipX/Y works with offsets (issue #732)
 . [FIX] Templates: Bundle Version is 1.0 (issue #871)

version 0.99.4-beta - 14-Jun-2010