@@ -1,5 +1,6 @@
 version 0.99.4 - xx-Jul-2010
  . [FIX] CocosDenshion: fixed memory leak weak reallocing buffers (issue #919)
+ . [FIX] Director: 2d projection + HighRes works OK (issue #918)
  . [FIX] EAGLView: removed unused 'delegate_' ivar
  . [FIX] EAGLView: it is possible to resize the view (issue #914)
  . [FIX] GLES-Render: solid objects' colors synced with box2d repository
